Fixed many bags

--- a/src/views/pages/admin/application/locales/en.json
+++ b/src/views/pages/admin/application/locales/en.json
@@ -44,5 +44,10 @@
             "school_attestat_translation": "School attestat translation",
             "biometric_photo": "Biometric photo"
         }
+    },
+    "statuses": {
+        "new": "New",
+        "pending": "Pending",
+        "viewed": "Viewed"
     }
 }
