--- a/src/views/pages/admin/application/locales/tm.json
+++ b/src/views/pages/admin/application/locales/tm.json
@@ -44,5 +44,10 @@
             "school_attestat_translation": "Mekdep attestatyn terjimesi",
             "biometric_photo": "Biometrik surat"
         }
+    },
+    "statuses": {
+        "new": "Täze",
+        "pending": "Garaşylýar",
+        "viewed": "Görüldi"
     }
 }
