--- a/src/views/pages/admin/university/locales/tm.json
+++ b/src/views/pages/admin/university/locales/tm.json
@@ -2,12 +2,15 @@
   "context_title": "Uniwersitetler",
   "form": {
     "company": "Kompaniýa",
+    "country": "Yurt",
+    "city": "Saher",
     "logo": "Logotip",
     "cover": "Örtük",
     "youtube_video_id": "YouTube video id - sy",
     "youtube_video": "YouTube video",
     "name": "Ady",
     "label": "Etiketkasy",
-    "description": "Düşündiriş"
+    "description": "Düşündiriş",
+    "is_on_the_country_list": "ýurduň sanawynda bar"
   }
 }
