--- a/src/views/pages/admin/department/locales/en.json
+++ b/src/views/pages/admin/department/locales/en.json
@@ -7,6 +7,8 @@
     "faculty": "Faculty",
     "activity": "Activity",
     "name": "Name",
-    "description": "Description"
+    "description": "Description",
+    "degrees": "Degrees",
+    "is_filled": "Is filled"
   }
 }
