--- a/src/views/pages/admin/department/locales/ru.json
+++ b/src/views/pages/admin/department/locales/ru.json
@@ -7,6 +7,8 @@
     "faculty": "Факультет",
     "activity": "Активность",
     "name": "Название",
-    "description": "Описание"
+    "description": "Описание",
+    "degrees": "Степени",
+    "is_filled": "Заполнен"
   }
 }
