--- a/src/views/pages/admin/degree/locales/tm.json
+++ b/src/views/pages/admin/degree/locales/tm.json
@@ -1,7 +1,6 @@
 {
-  "context_title": "Yurtlar",
+  "context_title": "Derejeler",
   "form": {
-    "company": "Kompaniya",
     "name": "Ady"
   }
 }
