Fixed some bags

--- a/src/views/pages/admin/department/locales/en.json
+++ b/src/views/pages/admin/department/locales/en.json
@@ -9,7 +9,7 @@
     "activity": "Activity",
     "name": "Name",
     "description": "Description",
-    "degrees": "Degrees",
+    "degree": "Degree",
     "language": "Language",
     "is_filled": "Is filled"
   }
