--- a/src/views/pages/admin/department/locales/ru.json
+++ b/src/views/pages/admin/department/locales/ru.json
@@ -9,7 +9,7 @@
     "activity": "Активность",
     "name": "Название",
     "description": "Описание",
-    "degrees": "Степени",
+    "degree": "Степен",
     "language": "Язык",
     "is_filled": "Заполнен"
   }
