--- a/src/views/pages/admin/countryAndCity/country/locales/tm.json
+++ b/src/views/pages/admin/countryAndCity/country/locales/tm.json
@@ -2,6 +2,7 @@
   "context_title": "Yurtlar",
   "form": {
     "name": "Ady",
-    "iso": "ISO"
+    "flag_prefix": "Baýdak prefiksi",
+    "flag": "Baýdak"
   }
 }
