--- a/src/services/translations/locales/system/ru.json
+++ b/src/services/translations/locales/system/ru.json
@@ -4,6 +4,20 @@
         "ru": "Русский",
         "tm": "Türkmençe"
     },
+    "gender": {
+        "label": "Пол",
+        "items": {
+            "male": "Мужской",
+            "female": "Женский"
+        }
+    },
+    "marital_status": {
+        "label": "Семейное положение",
+        "items": {
+            "single": "Одинокий",
+            "married": "Женатый"
+        }
+    },
     "translations": "Переводы",
     "actions": "Действи",
     "create": "Создать",
@@ -13,5 +27,6 @@
     "send": "Отправить",
     "save": "Сохранить",
     "save_changes": "Сохранить изменени",
-    "created_at": "Создан в"
+    "created_at": "Создан в",
+    "clear": "Очистить"
 }
