--- a/src/services/translations/locales/system/tm.json
+++ b/src/services/translations/locales/system/tm.json
@@ -28,5 +28,7 @@
     "save": "Saklaň",
     "save_changes": "Üýtgetmeleri ýatda sakla",
     "created_at": "Döredildi",
-    "clear": "Arassala"
+    "clear": "Arassala",
+    "upload": "Yükle",
+    "uploaded": "Yüklendi"
 }
