--- a/src/views/pages/admin/company/locales/en.json
+++ b/src/views/pages/admin/company/locales/en.json
@@ -3,8 +3,8 @@
   "form": {
     "name": "Name",
     "email": "Email",
-    "domain": "Domain",
     "logo": "Logo",
+    "is_main": "Main",
     "status": "Status"
   }
 }
