--- a/src/views/pages/admin/company/locales/ru.json
+++ b/src/views/pages/admin/company/locales/ru.json
@@ -3,8 +3,8 @@
     "form": {
       "name": "Название",
       "email": "E-почта",
-      "domain": "Домен",
       "logo": "Логотип",
+      "is_main": "Главный",
       "status": "Статус"
     }
 }
