--- a/src/services/translations/locales/system/ru.json
+++ b/src/services/translations/locales/system/ru.json
@@ -28,5 +28,7 @@
     "save": "Сохранить",
     "save_changes": "Сохранить изменени",
     "created_at": "Создан в",
-    "clear": "Очистить"
+    "clear": "Очистить",
+    "upload": "Загрузить",
+    "uploaded": "Загружено"
 }
