--- a/src/views/pages/admin/department/locales/en.json
+++ b/src/views/pages/admin/department/locales/en.json
@@ -11,6 +11,8 @@
     "description": "Description",
     "degree": "Degree",
     "language": "Language",
+    "price": "Price",
+    "currency": "Currency",
     "is_filled": "Is filled"
   }
 }
