--- a/src/views/pages/admin/departmentName/locales/ru.json
+++ b/src/views/pages/admin/departmentName/locales/ru.json
@@ -1,6 +1,7 @@
 {
   "context_title": "Названия департаментов",
   "form": {
-    "name": "Название"
+    "name": "Название",
+    "description": "Описание"
   }
 }
