--- a/src/views/pages/admin/department/locales/tm.json
+++ b/src/views/pages/admin/department/locales/tm.json
@@ -11,6 +11,8 @@
     "description": "Düşündiriş",
     "degree": "Dereje",
     "language": "Dil",
+    "price": "Bahasy",
+    "currency": "Walyuta",
     "is_filled": "Doldy"
   }
 }
