--- a/src/views/pages/admin/departmentName/locales/en.json
+++ b/src/views/pages/admin/departmentName/locales/en.json
@@ -1,6 +1,7 @@
 {
   "context_title": "Department names",
   "form": {
-    "name": "Name"
+    "name": "Name",
+    "description": "Description"
   }
 }
