Added Turkish lanaguage

--- a/src/services/translations/locales/system/en.json
+++ b/src/services/translations/locales/system/en.json
@@ -2,7 +2,8 @@
     "supported-locales": {
         "en": "English",
         "ru": "Русский",
-        "tm": "Türkmençe"
+        "tm": "Türkmençe",
+        "tr": "Türkçe"
     },
     "gender": {
         "label": "Gender",
