--- a/src/views/pages/admin/auth/locales/en.json
+++ b/src/views/pages/admin/auth/locales/en.json
@@ -1,15 +1,20 @@
 {
-    "login": "Login",
-    "logout": "Logout",
-    "access_to_our_dashboard": "Access to our dashboard",
-    "sign_in": "Sign in",
-    "forgot_password?": "Forgot Password?",
-    "do_not_have_an_account": "У вас нет учетной записи?",
-    "register": "Register",
-    "enter_your_email_to_get_a_password_reset_link": "Enter your email to get a password reset link",
-    "reset_password_link": "Reset Password Link",
-    "remember_your_password?": "Remember your password?",
-    "new_password": "New password",
-    "confirm_new_password": "Confirm new password",
-    "reset_password": "Reset Password"
+  "login": "Login",
+  "logout": "Logout",
+  "access_to_our_dashboard": "Access to our dashboard",
+  "sign_in": "Sign in",
+  "forgot_password?": "Forgot Password?",
+  "do_not_have_an_account": "У вас нет учетной записи?",
+  "register": "Register",
+  "enter_your_email_to_get_a_password_reset_link": "Enter your email to get a password reset link",
+  "reset_password_link": "Reset Password Link",
+  "remember_your_password?": "Remember your password?",
+  "new_password": "New password",
+  "confirm_new_password": "Confirm new password",
+  "reset_password": "Reset Password",
+  "flash_messages": {
+    "success": {
+      "welcome": "Welcome {first_name}! 😇"
+    }
+  }
 }
