--- a/src/views/pages/admin/auth/locales/ru.json
+++ b/src/views/pages/admin/auth/locales/ru.json
@@ -1,15 +1,20 @@
 {
-    "login": "Авторизоваться",
-    "logout": "Выйти",
-    "access_to_our_dashboard": "Доступ к нашей панели управления",
-    "sign_in": "Войти",
-    "forgot_password?": "Забыли пароль?",
-    "do_not_have_an_account": "Don’t have an account?",
-    "register": "Зарегистрироваться",
-    "enter_your_email_to_get_a_password_reset_link": "Введите свой адрес электронной почты, чтобы получить ссылку для сброса пароля",
-    "reset_password_link": "Ссылка для сброса пароля",
-    "remember_your_password?": "Помните свой пароль?",
-    "new_password": "Новый пароль",
-    "confirm_new_password": "Подтвердите новый пароль",
-    "reset_password": "Сброс пароля"
+  "login": "Авторизоваться",
+  "logout": "Выйти",
+  "access_to_our_dashboard": "Доступ к нашей панели управления",
+  "sign_in": "Войти",
+  "forgot_password?": "Забыли пароль?",
+  "do_not_have_an_account": "Don’t have an account?",
+  "register": "Зарегистрироваться",
+  "enter_your_email_to_get_a_password_reset_link": "Введите свой адрес электронной почты, чтобы получить ссылку для сброса пароля",
+  "reset_password_link": "Ссылка для сброса пароля",
+  "remember_your_password?": "Помните свой пароль?",
+  "new_password": "Новый пароль",
+  "confirm_new_password": "Подтвердите новый пароль",
+  "reset_password": "Сброс пароля",
+  "flash_messages": {
+    "success": {
+      "welcome": "Добро пожаловать {first_name}! 😇"
+    }
+  }
 }
