--- a/src/views/pages/admin/auth/locales/tm.json
+++ b/src/views/pages/admin/auth/locales/tm.json
@@ -1,15 +1,20 @@
 {
-    "login": "Giriş",
-    "logout": "Çykmak",
-    "access_to_our_dashboard": "Dolandyryş paneliimize girmek",
-    "sign_in": "Giriň",
-    "forgot_password?": "Paroly ýatdan çykardyňyzmy?",
-    "do_not_have_an_account": "Hasabyňyz ýokmy?",
-    "register": "Registrasiýa et",
-    "enter_your_email_to_get_a_password_reset_link": "Paroly täzeden düzmek baglanyşygyny almak üçin e-poçtaňyzy giriziň",
-    "reset_password_link": "Parol baglanyşygyny täzeden düzmek",
-    "remember_your_password?": "Parolyňyzy ýadyňyzdamy?",
-    "new_password": "Täze parol",
-    "confirm_new_password": "Täze paroly tassyklaň",
-    "reset_password": "Paroly täzeleň"
+  "login": "Giriş",
+  "logout": "Çykmak",
+  "access_to_our_dashboard": "Dolandyryş paneliimize girmek",
+  "sign_in": "Giriň",
+  "forgot_password?": "Paroly ýatdan çykardyňyzmy?",
+  "do_not_have_an_account": "Hasabyňyz ýokmy?",
+  "register": "Registrasiýa et",
+  "enter_your_email_to_get_a_password_reset_link": "Paroly täzeden düzmek baglanyşygyny almak üçin e-poçtaňyzy giriziň",
+  "reset_password_link": "Parol baglanyşygyny täzeden düzmek",
+  "remember_your_password?": "Parolyňyzy ýadyňyzdamy?",
+  "new_password": "Täze parol",
+  "confirm_new_password": "Täze paroly tassyklaň",
+  "reset_password": "Paroly täzeleň",
+  "flash_messages": {
+    "success": {
+      "welcome": "Hoş geldiňiz {first_name}! 😇"
+    }
+  }
 }
