--- a/src/views/pages/admin/profile/locales/ru.json
+++ b/src/views/pages/admin/profile/locales/ru.json
@@ -6,5 +6,26 @@
     "last_name": "Фамилия",
     "avatar": "Аватар",
     "email": "Эл. почта"
+  },
+  "flash_messages": {
+    "success": {
+      "profile_was_updated": "Профиль обновлен"
+    }
+  },
+  "partials": {
+    "change_password": {
+      "label": "Пароль",
+      "title": "Изменить пароль",
+      "form": {
+        "current_password": "Текущий пароль",
+        "new_password": "Новый пароль",
+        "new_password_confirmation": "Подтверждение нового пароля"
+      },
+      "flash_messages": {
+        "success": {
+          "password_was_changed": "Пароль был изменен"
+        }
+      }
+    }
   }
 }
