--- a/src/views/pages/admin/student/locales/tm.json
+++ b/src/views/pages/admin/student/locales/tm.json
@@ -10,6 +10,7 @@
     "document_name": "Resminamanyň ady",
     "extension": "Formaty",
     "file_name": "Faýlyň ady",
+    "generate_pdf": "PDF dörediň",
     "form": {
         "company": "Kompaniýa",
         "full_name": "Doly ady",
