--- a/src/views/pages/admin/student/locales/en.json
+++ b/src/views/pages/admin/student/locales/en.json
@@ -33,6 +33,7 @@
         "high_school_country": "High School Country",
         "high_school_name": "High School Name",
         "high_school_grade_average": "High school grade average",
+        "communication_language": "Communication language",
 
         "home_address": "Home address",
         "country": "Country",
