--- a/src/views/pages/admin/student/locales/ru.json
+++ b/src/views/pages/admin/student/locales/ru.json
@@ -33,6 +33,7 @@
         "high_school_country": "Страна средней школы",
         "high_school_name": "Название средней школы",
         "high_school_grade_average": "Средний балл средней школы",
+        "communication_language": "Язык общения",
 
         "home_address": "Домашний адрес",
         "country": "Страна",
