--- a/src/views/pages/admin/student/locales/tm.json
+++ b/src/views/pages/admin/student/locales/tm.json
@@ -33,6 +33,7 @@
         "high_school_country": "Orta mekdep ýurdy",
         "high_school_name": "Orta mekdebiň ady",
         "high_school_grade_average": "Orta mekdep ortaça bahasy",
+        "communication_language": "Aragatnaşyk dili",
 
         "home_address": "Öý salgysy",
         "country": "Yurt",
