Fixed many bags

--- a/src/services/translations/locales/system/en.json
+++ b/src/services/translations/locales/system/en.json
@@ -31,5 +31,7 @@
     "created_at": "Created at",
     "clear": "Clear",
     "upload": "Upload",
-    "uploaded": "Uploaded"
+    "uploaded": "Uploaded",
+    "all": "All",
+    "search_btn": "Search"
 }
