--- a/src/services/translations/locales/system/ru.json
+++ b/src/services/translations/locales/system/ru.json
@@ -31,5 +31,7 @@
     "created_at": "Создан в",
     "clear": "Очистить",
     "upload": "Загрузить",
-    "uploaded": "Загружено"
+    "uploaded": "Загружено",
+    "all": "Все",
+    "search_btn": "Поиск"
 }
