--- a/src/services/translations/locales/system/tm.json
+++ b/src/services/translations/locales/system/tm.json
@@ -31,5 +31,7 @@
     "created_at": "Döredildi",
     "clear": "Arassala",
     "upload": "Yükle",
-    "uploaded": "Yüklendi"
+    "uploaded": "Yüklendi",
+    "all": "Ählisi",
+    "search_btn": "Gözläň"
 }
