Ficed many fixes 25-06-24

--- a/src/views/pages/admin/department/locales/en.json
+++ b/src/views/pages/admin/department/locales/en.json
@@ -13,6 +13,6 @@
     "language": "Language",
     "price": "Price",
     "currency": "Currency",
-    "is_filled": "Is filled"
+    "is_filled": "Quota"
   }
 }
