--- a/src/views/pages/admin/department/locales/ru.json
+++ b/src/views/pages/admin/department/locales/ru.json
@@ -13,6 +13,6 @@
     "language": "Язык",
     "price": "Цена",
     "currency": "Валюта",
-    "is_filled": "Заполнен"
+    "is_filled": "Kвота"
   }
 }
