--- a/src/views/pages/admin/department/locales/tm.json
+++ b/src/views/pages/admin/department/locales/tm.json
@@ -13,6 +13,6 @@
     "language": "Dil",
     "price": "Bahasy",
     "currency": "Walyuta",
-    "is_filled": "Doldy"
+    "is_filled": "Kwota"
   }
 }
