--- a/src/views/pages/admin/department/locales/tr.json
+++ b/src/views/pages/admin/department/locales/tr.json
@@ -13,6 +13,6 @@
     "language": "Dil",
     "price": "Fiyat",
     "currency": "Para birimi",
-    "is_filled": "Dolu"
+    "is_filled": "Kontenjan"
   }
 }
