--- a/src/views/pages/admin/student/locales/tm.json
+++ b/src/views/pages/admin/student/locales/tm.json
@@ -12,6 +12,8 @@
     "file_name": "Faýlyň ady",
     "generate_pdf": "PDF dörediň",
     "search_placeholder_full_name": "Talybyň doly ady",
+    "download_documents": "Resminamalary göçürüp alyň",
+    "create_application": "Goýma dörediň",
     "form": {
         "company": "Kompaniýa",
         "full_name": "Doly ady",
