Added youTube videos and added price discount

--- a/src/views/pages/admin/department/locales/en.json
+++ b/src/views/pages/admin/department/locales/en.json
@@ -12,6 +12,7 @@
     "degree": "Degree",
     "language": "Language",
     "price": "Price",
+    "discount_price": "Discount price",
     "currency": "Currency",
     "is_filled": "Quota"
   }
