--- a/src/services/translations/locales/system/tm.json
+++ b/src/services/translations/locales/system/tm.json
@@ -19,6 +19,9 @@
             "married": "Öýlenen"
         }
     },
+    "pagination": {
+        "info": "{two} ýazgydan {zero}-den {first}-e çenli görkezilýär"
+    },
     "translations": "Terjimeleri",
     "actions": "Hereketler",
     "create": "Döret",
