--- a/src/services/translations/locales/system/ru.json
+++ b/src/services/translations/locales/system/ru.json
@@ -33,8 +33,10 @@
     "save_changes": "Сохранить изменени",
     "created_at": "Создан в",
     "clear": "Очистить",
+    "clear_all": "Очистить все",
     "upload": "Загрузить",
     "uploaded": "Загружено",
     "all": "Все",
-    "search_btn": "Поиск"
+    "search_btn": "Поиск",
+    "notification": "Уведомление"
 }
