--- a/src/views/pages/admin/setting/locales/tm.json
+++ b/src/views/pages/admin/setting/locales/tm.json
@@ -2,7 +2,8 @@
   "context_title": "Sazlamalar",
   "tabs": {
     "general_settings": "Baş sazlamalar",
-    "about_us": "Biz hakynda"
+    "about_us": "Biz hakynda",
+    "university-for-foreign-student": "Daşary ýurtly talyplar üçin uniwersitet"
   },
   "form": {
     "about_us": {
