--- a/src/views/pages/admin/university/locales/en.json
+++ b/src/views/pages/admin/university/locales/en.json
@@ -11,6 +11,7 @@
         "name": "Name",
         "label": "Label",
         "description": "Description",
-        "is_on_the_country_list": "Is on the country list"
+        "is_on_the_country_list": "Is on the country list",
+        "is_for_foreign": "Is for foreign students"
     }
 }
