--- a/src/views/pages/admin/university/locales/ru.json
+++ b/src/views/pages/admin/university/locales/ru.json
@@ -11,6 +11,7 @@
     "name": "Называть",
     "label": "Этикетка",
     "description": "Описание",
-    "is_on_the_country_list": "Есть в списке страны"
+    "is_on_the_country_list": "Есть в списке страны",
+    "is_for_foreign": "Для иностранных студентов"
   }
 }
