--- a/src/views/pages/admin/university/locales/tm.json
+++ b/src/views/pages/admin/university/locales/tm.json
@@ -11,6 +11,7 @@
     "name": "Ady",
     "label": "Etiketkasy",
     "description": "Düşündiriş",
-    "is_on_the_country_list": "ýurduň sanawynda bar"
+    "is_on_the_country_list": "ýurduň sanawynda bar",
+    "is_for_foreign": "Daşary ýurtly talyplar üçin"
   }
 }
