University top position

--- a/src/views/pages/admin/university/locales/en.json
+++ b/src/views/pages/admin/university/locales/en.json
@@ -12,6 +12,7 @@
         "label": "Label",
         "description": "Description",
         "is_on_the_country_list": "Is on the country list",
-        "is_for_foreign": "Is for foreign students"
+        "is_for_foreign": "Is for foreign students",
+        "top_position": "TOP position"
     }
 }
