--- a/src/views/pages/admin/university/locales/tm.json
+++ b/src/views/pages/admin/university/locales/tm.json
@@ -12,6 +12,7 @@
     "label": "Etiketkasy",
     "description": "Düşündiriş",
     "is_on_the_country_list": "ýurduň sanawynda bar",
-    "is_for_foreign": "Daşary ýurtly talyplar üçin"
+    "is_for_foreign": "Daşary ýurtly talyplar üçin",
+    "top_position": "TOP pozisiýasy"
   }
 }
