fixed: permission table

--- a/src/views/pages/admin/permission/locales/tm.json
+++ b/src/views/pages/admin/permission/locales/tm.json
@@ -10,7 +10,25 @@
     "country": "Yurt",
     "city": "Şeher",
     "language": "Dil",
-    "announcement": "Announcement"
+    "announcement": "Announcement",
+    "contest": "Contest",
+    "document": "Document",
+    "dashboard": "Dashboard",
+    "company": "Company",
+    "employee": "Employee",
+    "student": "Student",
+    "application_status_value": "Application status",
+    "alias": "Alias",
+    "degree": "Degree",
+    "university": "University",
+    "faculty_name": "Faculty name",
+    "faculty": "Faculty",
+    "department_name": "Department name",
+    "department": "Department",
+    "manager": "Manager",
+    "permission": "Permission",
+    "setting": "Setting",
+    "role": "Role"
   },
   "actions": {
     "index": "Index",
